--- a/DemoApp/app/src/main/res/layout/button_bar.xml
+++ b/DemoApp/app/src/main/res/layout/button_bar.xml
@@ -86,9 +86,9 @@
         android:layout_marginBottom="4dp"
         android:stepSize="5"
         android:textAlignment="center"
-        android:value="25"
-        android:valueFrom="0"
-        android:valueTo="200"
+        android:value="@integer/prediction_default"
+        android:valueFrom="@integer/prediction_min"
+        android:valueTo="@integer/prediction_max"
         android:contentDescription="@string/accessibility_prediction"
         app:layout_constraintBottom_toTopOf="@id/button_black"
         app:layout_constraintEnd_toEndOf="@id/button_blue"
