--- a/DemoApp/app/src/main/res/layout/canvas.xml
+++ b/DemoApp/app/src/main/res/layout/canvas.xml
@@ -15,22 +15,29 @@
   ~ limitations under the License.
   -->
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <FrameLayout
-        android:id="@+id/frameMainCanvas"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:contentDescription="@string/accessibility_low_latency_canvas"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-    </FrameLayout>
+    <data>
 
-    <include layout="@layout/button_bar"/>
+    </data>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <FrameLayout
+            android:id="@+id/frameMainCanvas"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:contentDescription="@string/accessibility_low_latency_canvas"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"></FrameLayout>
+
+        <include layout="@layout/button_bar"
+            android:id="@+id/canvas_button_bar"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
